# Aula-de-Docker

./: README.md  app.py  docker-compose.yaml  pyproject.toml
app/: app.py
